yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-and-morty-app-deployment
  labels:
    app: rick-and-morty-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rick-and-morty-app
  template:
    metadata:
      labels:
        app: rick-and-morty-app
    spec:
      containers:
      - name: rick-and-morty-app
        image: rick_and_morty_app:latest
        imagePullPolicy: IfNotPresent  # or use "Never" if you're sure the image is always built locally
        ports:
        - containerPort: 5000
