yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-app-service
spec:
  selector:
    app: rick-and-morty-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
